--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,26 @@
-version: "3"
-
 services:
   backend:
     build:
-      context: ./backend
+      context: ./back
     container_name: biblio_python
     ports:
     - "8000:8000"
     volumes:
-    - ./backend:/app
-    environement:
+    - ./back:/app
+    environment:
     - DATABASE_URL=postgresql://postgres:password@db:5432/biblio
     depends_on:
     - db
 
   db:
-    image: postgres:15
+    image: postgres:17
     container_name: db
     restart: always
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./back/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
