--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
     - ./back:/app
     environment:
-    - DATABASE_URL=postgresql://postgres:password@db:5432/biblio
+    - DATABASE_URL=postgresql://postgres:password@localhost:5432/biblio
     depends_on:
     - db
 
@@ -20,7 +20,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./back/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./back/app/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
