--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,25 @@ next-env.d.ts
 
 # BACK #
 database/__pychache__
+back/app/__pycache__/main.cpython-311.pyc
+back/app/controllers/__pycache__/__init__.cpython-311.pyc
+back/app/controllers/__pycache__/book_controller.cpython-311.pyc
+back/app/controllers/__pycache__/user_controller.cpython-311.pyc
+back/app/database/__pycache__/__init__.cpython-311.pyc
+back/app/database/__pycache__/database.cpython-311.pyc
+back/app/models/__pycache__/__init__.cpython-311.pyc
+back/app/models/__pycache__/association_tables.cpython-311.pyc
+back/app/models/__pycache__/author.cpython-311.pyc
+back/app/models/__pycache__/base.cpython-311.pyc
+back/app/models/__pycache__/book.cpython-311.pyc
+back/app/models/__pycache__/image.cpython-311.pyc
+back/app/models/__pycache__/serie.cpython-311.pyc
+back/app/models/__pycache__/user.cpython-311.pyc
+back/app/repositories/__pycache__/__init__.cpython-311.pyc
+back/app/repositories/__pycache__/base.cpython-311.pyc
+back/app/repositories/__pycache__/book_repository.cpython-311.pyc
+back/app/repositories/__pycache__/user_repository.cpython-311.pyc
+back/app/routes/__pycache__/__init__.cpython-311.pyc
+back/app/routes/__pycache__/book_route.cpython-311.pyc
+back/app/routes/__pycache__/user_route.cpython-311.pyc
+back/app/database/__pycache__/database.cpython-311.pyc
