--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
     - ./back:/app
     environment:
-    - DATABASE_URL=postgresql://postgres:password@localhost:5432/biblio
+    - DATABASE_URL=postgresql://postgres:password@db:5432/biblio
     depends_on:
     - db
 
