--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,12 @@ back/app/routes/__pycache__/__init__.cpython-311.pyc
 back/app/routes/__pycache__/book_route.cpython-311.pyc
 back/app/routes/__pycache__/user_route.cpython-311.pyc
 back/app/database/__pycache__/database.cpython-311.pyc
+back/app/controllers/__pycache__/author_controller.cpython-311.pyc
+back/app/controllers/__pycache__/image_controller.cpython-311.pyc
+back/app/controllers/__pycache__/serie_controller.cpython-311.pyc
+back/app/repositories/__pycache__/author_repository.cpython-311.pyc
+back/app/repositories/__pycache__/image_repository.cpython-311.pyc
+back/app/repositories/__pycache__/serie_repository.cpython-311.pyc
+back/app/routes/__pycache__/author_route.cpython-311.pyc
+back/app/routes/__pycache__/image_route.cpython-311.pyc
+back/app/routes/__pycache__/serie_route.cpython-311.pyc
